--- a/config/cones_detect.param.yaml
+++ b/config/cones_detect.param.yaml
@@ -1,6 +1,6 @@
 /**:
   ros__parameters:
     param_name: 789
-    build_engine: false
+    build_engine: true
     model_path: "src/cones_detect/src/best_nano.onnx"
     engine_path: "src/cones_detect/src/best_nano.engine"
