--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,10 @@
   <depend>launch_ros</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
-
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>cones_interfaces</depend>
+  
   <test_depend>ament_cmake_ros</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
