--- a/config/cones_detect.param.yaml
+++ b/config/cones_detect.param.yaml
@@ -2,5 +2,6 @@
   ros__parameters:
     param_name: 789
     build_engine: true
+    show_image: true
     model_path: "src/cones_detect/src/best_nano.onnx"
     engine_path: "src/cones_detect/src/best_nano.engine"
